# ReallyShadowheart

./: .gitignore  setup.cfg
src/bg3moddinglib/: __init__.py  _ai_tools.py  _assets.py  _attitudes.py  _common.py  _constants.py  _context.py  _dialog.py  _dialog_differ.py  _dialog_to_html.py  _env.py  _files.py  _flags.py  _gossips.py  _journal.py  _loca.py  _merger.py  _meta_lsx.py  _reactions.py  _scanner.py  _scene.py  _skillchecks.py  _soundbank.py  _speakers.py  _string_keys.py  _tags.py  _timeline.py  _timeline_differ.py  _tool.py  _types.py
src/freedom_of_religion/: __init__.py  deities.py  text_content.py
src/freedom_of_religion/context/: __init__.py
src/really_shadowheart/: __init__.py  act1_romance.py  act2_romance.py  act3_romance.py  assets.py  banters.py  betrayal_reactions.py  bhaal_temple.py  books.py  breakup_line.py  city_walk.py  cloister.py  common.py  conversations.py  creepy_druid.py  daughters_tears.py  dialog_overrides.py  ea_goblin_camp.py  ea_grove.py  ea_putrid_bog.py  ea_wilderness.py  end_game_epilogue_married.py  end_game_marriage_proposal.py  extras.py  fixes.py  flags.py  gale.py  greetings.py  hug_animations.py  improvements.py  in_laws.py  kiss_animations.py  long_rest.py  minsc.py  minthara.py  mizora_aftermath.py  more_kisses.py  relationship.py  shadowheart.py  sharess_caress.py  (+3 more)
src/really_shadowheart/context/: __init__.py
src/really_shadowheart_ext/: __init__.py  extension.py  soundbanks.py  text_content.py
src/really_shadowheart_ext/context/: __init__.py
(+20 files in other folders)
