[metadata]
name = b3moddinglib
version = 1.0.1.0
author = iamy0urdad
author_email = 0x1amy0urdad@gmail.com
description = Baldurs Gate 3 modding library
long_description = file: README.md
keywords = bg3, baldur, baldurs, gate, mod, modding
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires =
    anthropic >= 0.55.0
    requests >= 2.32.3
    pyinstaller >= 6.12.0
    wxpython >= 4.2.3

[options.packages.find]
where = src

[tool:pytest]
testpaths =
    test